--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,14 @@ body {
   font-size: 10px;
 }
 
+
 .container {
   text-align: center;
   font-size: 3em;
-  width: 100%;
-  margin: 25%;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
   background-color: #dadada;
 }
 
@@ -36,46 +39,51 @@ body {
 }
 
 .baku {
-    background-image: url("images/baku.jpg");
+    background-image: url("/images/baku.jpg");
     margin: 2%;
 }
 
 .london {
-    background-image: url("images/london.png");
+    background-image: url("/images/london.png");
     margin: 2%;
 }
 
 .madrid {
-    background-image: url("images/madrid.jpg");
+    background-image: url("/images/madrid.jpg");
     margin: 2%;
 }
 
 .rome {
-    background-image: url("images/rome.jpg");
+    background-image: url("/images/rome.jpg");
     margin: 2%;
 }
 
-@media all and (max-width: 575px) {
-  {
-    width: 48%
-    margin: 1%;
-    background-color: green;
-  }
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 @media screen and (max-width: 575px) {
-  {
-    width: 48%
-    margin: 1%;
-    background-color: green;
+.baku h1, .london h1, .madrid h1, .rome h1
+
+.column {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 575px) {
+.baku h1, .london h1, .madrid h1, .rome h1
+
+.column {
+    width: 50%;
   }
 }
 
 
-@media screen and (max-width: 1200px) {
-  {
-    width: 40%
-    margin: 1%;
-    background-color: green;
+@media screen and (min-width: 991px) {
+.baku h1, .london h1, .madrid h1, .rome h1
+
+.column {
+    width: 25%;
   }
-}
